# zero2prod

./: Cargo.toml  spec.yaml
configuration/: base.yaml
scripts/: init_db.sh
src/: configuration.rs  main.rs  startup.rs  telemetry.rs
src/routes/: health_check.rs  subscriptions.rs
tests/: health_check.rs
